added contact and design questionnaire; connected to firebase;

--- a/assets/css/clientss.css
+++ b/assets/css/clientss.css
@@ -1,7 +1,7 @@
 /*client slideshow*/
 	#sec5 {
 	    background-color: rgba(0, 0, 0, 0.05);
-	    height: 60%;
+	    height: 460px;
 	    border-top: 1px rgba(0, 0, 0, 0.2) solid;
 	    border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
 	    padding: 30px 0;
