--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,15 +1,86 @@
-/*contact form*/
-	#seccontact {
-		height: 100%;
-	}
-	
-	.headertitle {
-		padding: 200px 0 0;
-		transition: all 5s ease-in-out;
+/*navigation menu*/
+	header {
+	    width: 100%;
+	    height: 60px;
+	    background-color: rgba(214, 187, 114, 0.1);
+	    border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
 	}
 
-	#seccontact form {
-		text-align: center;
-		height: 100%;
-		transition: all 4s ease-in-out;
+	header .row {
+	    width: 100%!important;
+	}
+
+	header #logo {
+	    margin: 3px 0px 0px 30%;
+	    height: 50px;
+	}
+
+	nav ul {
+	    display: flex;
+	    float: right;
+	    transition: .3s;
+	    padding: 16px 25% 0 0;
+	}
+
+	nav ul li {
+	    list-style: none;
+	    margin: 0px 6px;
+	    text-align: center;
+	}
+
+	nav ul li a {
+	    text-decoration: none;
+	    text-transform: uppercase;
+	    color: #000;
+	    transition: .3s;
+	    font-size: 18px;
+	    font-family: 'Montserrat', sans-serif;
+	}
+
+	nav ul li a:hover {
+	    color: #19c7cd;
+	    text-decoration: none;
+	}
+
+	nav ul li a.tgjactive {
+	    color: #19c7cd;
+	}
+
+	.startbutton {
+	    margin: 0!important;
+	}
+
+
+/*contact form*/
+	#contact {
+	    height: 600px;
+	    background-color: rgba(214, 187, 114, 0.2);
+	    padding: 50px 0 0;
+	}
+
+	#contactform input,
+	#contactform textarea {
+	    width: 100%;
+	    border-radius: 5px;
+	}
+
+	#contactform input {
+	    margin-bottom: 15px;
+	}
+
+	#contactform .input div {
+	    text-decoration: underline;
+	    font-size: 20px;
+	}
+
+	#contact .col-4:nth-child(2) {
+		padding: 100px 10px 0;
+	}
+
+	#contact h5 {
+		font-size: 30px;
+	}
+
+	#contact p {
+		font-size: 18px;
 	}
