--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,9 +1,10 @@
 /*footer*/
 	footer {
-	    height: 300px;
+	    height: 240px;
 	    width: 100%;
-	    padding: 80px 0 0;
+	    padding: 50px 0 0;
 	    background-color: #292929;
+	    bottom: 0;
 	}
 
 	footer #links {
