--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,309 @@
-html, 
-body {
-    height: 100%!important;
-    margin: 0;
-    padding: 0;
+@charset "UTF-8";
+html, body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-:root {
-	--introblue: #64D1FF;
-	--tgjblue: #19c7cd;
-} 
+html {
+  font-size: 10px;
+}
+
+*.display-none {
+  display: none;
+}
+
+*.container-center {
+  width: 80%;
+  margin: auto;
+}
+
+#three-step-process:after, #main-intro:after, nav:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#three-step-process #process-text h3, #why-we-diff h3 {
+  font-size: 3rem;
+  font-weight: 500;
+  border: 0.3rem solid #000;
+  display: inline-block;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+nav {
+  width: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: 0.3s;
+  position: fixed;
+  z-index: 1;
+  text-align: center;
+  padding-top: 1rem;
+}
+nav.scroll-change {
+  background: rgba(255, 255, 255, 0.97);
+  border-bottom: solid #19c7cd 4px;
+}
+nav.scroll-change h1 {
+  color: #292929 !important;
+}
+nav.scroll-change h1 span {
+  color: #23e2e9 !important;
+}
+nav.scroll-change a {
+  color: #292929 !important;
+}
+nav div {
+  display: inline-block;
+  width: calc((100% - 5%)/3);
+}
+@media screen and (max-width: 780px) {
+  nav div {
+    display: block;
+    margin: auto;
+    width: 100%;
+  }
+}
+nav #nav-main-name #tgj-logo {
+  width: 2.5rem;
+  transform: translate(0, -0.25rem);
+  margin-right: 0.5rem;
+}
+nav #nav-main-name h1 {
+  margin-bottom: 2rem;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  display: inline-block;
+}
+nav #nav-main-name h1 span {
+  color: #292929;
+}
+nav .design-button .start-design {
+  display: block;
+  border-radius: 0.3rem;
+  background-color: #FF8E3A;
+  border: none;
+  color: #fff;
+  font-size: 1.8rem;
+  padding: 0.3rem;
+  width: 14rem;
+  height: 4.5rem;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: auto;
+  font-family: "Montserrat", sans-serif;
+}
+nav .design-button .start-design span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+nav .design-button .start-design span:after {
+  content: "»";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -1rem;
+  transition: 0.5s;
+}
+nav .design-button .start-design:hover span {
+  padding-right: 1.3rem;
+}
+nav .design-button .start-design:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+nav #nav-links ul {
+  width: 4rem;
+  display: inline;
+  padding: 0;
+}
+nav #nav-links ul li {
+  display: inline-block;
+  text-decoration: none;
+  list-style: none;
+  margin: 0 0.5rem;
+}
+nav #nav-links ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  transition: 0.3s;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+#main-intro {
+  background: #23e2e9;
+  padding: 8rem 0 6rem;
+}
+#main-intro #text-button {
+  margin: auto;
+  height: 70.1rem;
+  width: 102.5rem;
+  padding-top: 10rem;
+  padding-left: 1rem;
+  background-image: url("../images/intro-pic.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+}
+@media screen and (max-width: 1440px) {
+  #main-intro #text-button {
+    height: 57.2rem;
+    width: 83.6rem;
+    padding-top: 6.5rem;
+  }
+}
+@media screen and (max-width: 1180px) {
+  #main-intro #text-button {
+    width: 70rem;
+    height: 50rem;
+    padding-top: 7rem;
+  }
+}
+#main-intro #text-button h2, #main-intro #text-button p {
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+}
+#main-intro #text-button h2 {
+  font-size: 6rem;
+}
+@media screen and (max-width: 1440px) {
+  #main-intro #text-button h2 {
+    font-size: 5.3rem;
+  }
+}
+@media screen and (max-width: 1180px) {
+  #main-intro #text-button h2 {
+    font-size: 4.2rem;
+  }
+}
+#main-intro #text-button p {
+  font-size: 1.8rem;
+}
+@media screen and (max-width: 1440px) {
+  #main-intro #text-button p {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 1180px) {
+  #main-intro #text-button p {
+    font-size: 1.3rem;
+  }
+}
+#main-intro #text-button .design-button .start-design {
+  display: block;
+  border-radius: 0.3rem;
+  background-color: #FF8E3A;
+  border: none;
+  color: #fff;
+  font-size: 1.8rem;
+  padding: 0.3rem;
+  width: 14rem;
+  height: 4.5rem;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: auto;
+  font-family: "Montserrat", sans-serif;
+}
+#main-intro #text-button .design-button .start-design span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+#main-intro #text-button .design-button .start-design span:after {
+  content: "»";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -1rem;
+  transition: 0.5s;
+}
+#main-intro #text-button .design-button .start-design:hover span {
+  padding-right: 1.3rem;
+}
+#main-intro #text-button .design-button .start-design:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+#why-we-diff {
+  text-align: center;
+  padding: 4rem;
+}
+#why-we-diff h3 {
+  margin-bottom: 2rem;
+}
+#why-we-diff .group {
+  width: 80%;
+  margin: auto;
+}
+#why-we-diff .group .reason {
+  width: calc(99%/3);
+  display: inline-block;
+  margin: auto;
+}
+@media screen and (max-width: 1180px) {
+  #why-we-diff .group .reason {
+    display: block;
+    width: 100%;
+  }
+  #why-we-diff .group .reason:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+#why-we-diff .group .reason h4 {
+  font-size: 2.6rem;
+}
+#why-we-diff .group .reason p {
+  font-size: 1.6rem;
+}
+#why-we-diff .group .reason img {
+  height: 7rem;
+}
+
+#three-step-process {
+  background: rgba(0, 0, 0, 0.05);
+  padding: 4rem 3% 0;
+  text-align: center;
+}
+#three-step-process #process-display {
+  width: 95rem;
+  height: 70rem;
+  background-image: url("../images/ipad-mock-up.png");
+  background-size: cover;
+  float: left;
+  padding: 34rem 2.5rem 0 0;
+}
+@media screen and (max-width: 1440px) {
+  #three-step-process #process-display {
+    width: 68rem;
+    height: 50rem;
+    padding-top: 24rem;
+  }
+}
+#three-step-process #process-text {
+  margin-top: 25rem;
+}
+@media screen and (max-width: 1440px) {
+  #three-step-process #process-text {
+    margin-top: 15rem;
+  }
+}
+#three-step-process #process-text .process-text-all h4 {
+  font-size: 2.6rem;
+}
+#three-step-process #process-text .process-text-all p {
+  font-size: 1.6rem;
+}
+
+/*# sourceMappingURL=style.css.map */
