--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -21,7 +21,7 @@ $primary-white: #fff
 $primary-off-white: rgba(0,0,0,0.05)
 $bg-blue: #64D1FF
 $primary-font: 'Montserrat', sans-serif
-$header-four: 2.6rem
+$header-fsour: 2.6rem
 $regular-size: 1.6rem
 
 // extends/inheritance
@@ -85,6 +85,8 @@ $regular-size: 1.6rem
 @import _navbar
 
 @import _index-intro
+
+@import index-who
 
 @import _index-diff
 
