--- a/assets/sass/_index-intro.sass
+++ b/assets/sass/_index-intro.sass
@@ -1,10 +1,10 @@
-#main-intro
+.main-intro
     background: $primary-blue
     padding: 8rem 0 6rem
-    &:after
-        @extend %clearfix
-        
-    #text-button
+    
+    @include clearfix
+
+    .text-button
         margin: auto
         height: 70.1rem
         width: 102.5rem
