--- a/assets/sass/_index-diff.sass
+++ b/assets/sass/_index-diff.sass
@@ -1,25 +1,19 @@
-#why-we-diff
+.why
     text-align: center
-    padding: 4rem
+    padding: 5rem
 
-    h3
-        margin-bottom: 2rem
-        @extend %header-three
-    .group
-        width: 80%
+    &-reason
+        width: calc(99%/3)
+        display: inline-block
         margin: auto
-        .reason
-            width: calc(99%/3)
-            display: inline-block
-            margin: auto
-            @media screen and (max-width: 1180px)
-                display: block
-                width: 100%
-                &:not(:last-child)
-                    margin-bottom: 3rem
-            h4
-                font-size: $header-four
-            p
-                font-size: $regular-size
-            img
-                height: 7rem
+        @media screen and (max-width: 1180px)
+            display: block
+            width: 100%
+            &:not(:last-child)
+                margin-bottom: 3rem
+        h4
+            font-size: $header-four
+        p
+            font-size: $regular-size
+        img
+            height: 7rem
