--- a/assets/sass/_navbar.sass
+++ b/assets/sass/_navbar.sass
@@ -3,7 +3,7 @@ nav
     background: rgba(0,0,0,0)
     transition: .3s
     position: fixed
-    z-index: 1
+    z-index: 100000
     text-align: center
     padding-top: 1rem
 
@@ -18,8 +18,7 @@ nav
         a
             color: $primary-grey!important
 
-    &:after
-        @extend %clearfix
+    @include clearfix
 
     div
         display: inline-block
@@ -31,8 +30,8 @@ nav
             margin: auto
             width: 100%
 
-    #nav-main-name
-        #tgj-logo
+    .nav-main-name
+        .tgj-logo
             width: 2.5rem
             transform: translate(0, -.25rem)
             margin-right: .5rem
@@ -49,7 +48,7 @@ nav
     .design-button
         @include design-button
 
-    #nav-links
+    .nav-links
 
         ul
             width: 4rem
