--- a/assets/sass/_grid.sass
+++ b/assets/sass/_grid.sass
@@ -2,7 +2,7 @@
     @media screen and (max-width: 1440px)
         max-width: $grid-width
 
-    max-width: 168rem
+    // max-width: 168rem
 
     // background-color: #eee
     margin: 0 auto
