--- a/assets/sass/_index-intro.sass
+++ b/assets/sass/_index-intro.sass
@@ -1,6 +1,6 @@
 .main-intro
-    background: $primary-blue
-    padding: 8rem 0 6rem
+    background: $secondary-blue
+    padding: 14vh 0 14vh
     
     @include clearfix
 
@@ -13,7 +13,6 @@
         background-image: url('../images/intro-pic.png')
         background-size: cover
         background-repeat: no-repeat
-        background-position: top
         @media screen and (max-width: 1440px)
             height: 57.2rem
             width: 83.6rem
