--- a/assets/sass/_form.sass
+++ b/assets/sass/_form.sass
@@ -1,15 +1,25 @@
+// nav 
+//     position: static!important
+    
 .projects
-    &-card
-        display: inline-block
+    margin: auto
+    padding: 5rem
+
+    &-card_front
+        margin: auto
         width: 22rem
         height: 32rem
         border-radius: .5rem
         background-color: $primary-white
         position: relative
+        box-shadow: 0 1rem 4rem rgba(0,0,0,0.5)
 
         @media screen and (max-width: 1440px)
-            width: 15rem
-            height: 21rem
+            width: 35rem
+            height: 44rem
+
+        &:hover
+            transform: rotateY(180deg)
 
         &:not(:last-child) 
             margin-right: 1rem
@@ -23,7 +33,7 @@
         &_3
             background-color: $primary-orange
 
-    [class^='process-image']
+    [class^='projects-image_front']
         clip-path: circle(50%)
         width: 15rem
         height: 15rem
@@ -38,25 +48,25 @@
         transform: translate(-50%, -50%)
 
         @media screen and (max-width: 1440px)
-            width: 10rem
-            height: 10rem
-            background-size: 7rem
-            top: 8rem
-            left: 7.5rem
+            width: 20rem
+            height: 20rem
+            background-size: 15rem
+            top: 18rem
+            left: 17rem
 
-    &-image_1
+    &-image_front_1
         background-image: url('../svg/web_design.svg')
 
-    &-image_2
+    &-image_front_2
         background-image: url('../svg/tgj_logo_form.svg')
         background-size: 6rem!important
         @media screen and (max-width: 1440px)
-            background-size: 4rem!important
+            background-size: 8rem!important
 
-    &-image_3
+    &-image_front_3
         background-image: url('../svg/business_cards.svg')
 
-    [class^='process-border']
+    [class^='projects-border_front']
         clip-path: circle(50%)
         width: 16rem
         height: 16rem
@@ -67,21 +77,21 @@
         transform: translate(-50%, -50%)
 
         @media screen and (max-width: 1440px)
-            width: 11rem
-            height: 11rem
-            top: 8rem
-            left: 7.5rem
+            width: 21rem
+            height: 21rem
+            top: 18rem
+            left: 17rem
 
-    &-border_1
+    &-border_front_1
         background-color: $bg-blue
 
-    &-border_2
+    &-border_front_2
         background-color: $primary-blue
 
-    &-border_3
+    &-border_front_3
         background-color: $primary-orange
 
-    [class^='process-title']
+    [class^='projects-title_front']
         background-color: $primary-white
         width: 12rem
         height: 4rem
@@ -94,24 +104,33 @@
         text-transform: uppercase
         padding-top: .5rem
         border-radius: .5rem
+        text-align: center
 
         @media screen and (max-width: 1440px)
-            font-size: $regular-size
-            top: 15rem
-            left: 7.5rem
+            font-size: 2.4rem
+            width: 25rem
+            height: 5rem
+            top: 30rem
+            left: 17rem
             padding-top: .8rem
 
-    &-title_1
+    &-title_front_1
         color: $bg-blue
 
-    &-title_2
+    &-title_front_2
         color: $primary-blue
 
-    &-title_3
+    &-title_front_3
         color: $primary-orange
         font-size: 1.8rem!important
         @media screen and (max-width: 1440px)
             font-size: 1.3rem!important
             padding-top: 1rem!important
 
+// .item 
+//     perspective: 150rem
 
+//     &-side
+//         background-color: $primary-blue
+//         height: 44rem
+//         width: 35rem
