--- a/assets/sass/_index-we.sass
+++ b/assets/sass/_index-we.sass
@@ -1,38 +1,27 @@
 .who
-    padding: 5rem
+    padding: 15rem
     @include clearfix
-    .h3-white
-        text-shadow: -.2rem .3rem $primary-white
-
     position: relative
-    &-image
-        background-color: #000
-        clip-path: circle(50%)
-        width: 35rem
-        height: 35rem
-        float: left
-        shape-outside: circle(50% at 50% 50%)
 
-    &-text
-        font-size: 2.5rem
-        width: 96%
-        transform: translateX(6rem)
-        line-height: 4rem
-        padding-top: 5rem
-        color: #000
+    h3
+        line-height: 8rem
+        // border: .6rem solid #000
+        // margin: 0 20rem 0 25rem
+        padding-top: 1rem
+        // border-radius: 2rem
 
-    &-bggradient
-        width: 100%
-        height: 100%
-        position: absolute
-        top: 0
-        left: 0
-        z-index: -5
-        background: linear-gradient(to bottom, transparent, $primary-white)
+    .header
+        display: block
 
-    &-bgimage
-        background-image: url('../images/ggbridge.jpg')
-        opacity: 1
-        @extend %background-image
+        &-are
+            letter-spacing: 2rem
+            padding-left: 0.9rem
 
-
+        &-we
+            letter-spacing: 1.6rem
+            padding-left: 0.9rem
+    
+    &-description
+        font-size: $regular-size
+        font-family: $primary-font
+        font-weight: lighter
